<resources>
    <string name="app_name">NAVER 쇼핑 가격 변동 알림앱</string>

    <string name="won">원</string>

    <!-- 화면 이름 -->
    <string name="frame_name_login">로그인</string>
    <string name="frame_name_graph">상품 가격 그래프</string>
    <string name="frame_name_item_search">상품 검색</string>
    <string name="frame_name_item_list">Wish List</string>
    <string name="frame_name_search_result">검색 결과</string>
    <string name="frame_name_item_show_more_item_info">상품 상세 정보</string>

    <!-- 로그인 화면의 text 정의 -->
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인 or 신규등록</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="error_invalid_email">이메일 주소를 잘못 입력하셨습니다.</string>
    <string name="error_invalid_password">비밀번호가 너무 짧습니다.</string>
    <string name="error_incorrect_password">비밀번호를 잘못 입력하셨습니다.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"이메일 완료를 제공하려면 연락처 권한이 필요합니다."</string>


    <string name="search">검색</string>
    <string name="searchViewText">검색어를 입력하세요</string>
    <string name="item_add_button">item_add_button</string>
    <string name="addButton_text">추 가</string>
    <string name="wish_text">WISH LIST 가격 변동 정보</string>
    <string name="search_item_more_info">검색결과 상품의 상세 정보</string>

    <!-- 검색 결과 상품 상세 정보 화면 string 정의 -->
    <string name="addToWishListButtonText">WishList에 추가</string>
    <string name="title">title</string>
    <string name="lprice">lprice</string>
    <string name="mallName">mallName</string>

    <!-- wish list 상품 상세 정보 (가격 변동 그래프 표시) 화면 string 정의 -->
    <string name="buyButtonText">상품구매</string>
    <string name="titleText">title</string>
    <string name="lpriceText">lprice</string>
    <string name="dateText">date</string>

    <!-- 위시 리스트 Item 삭제시 확인 Dialog 의 Strings 정의 -->
    <string name="messageOfDeleteDialog">이 상품을 위시리스트에서 삭제 하시겠습니까？</string>
    <string name="titleOfDeleteDialog">확인</string>
    <string name="deleteFinishedMessage">삭제 되었습니다.</string>


</resources>
