<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowMoreItemInfoActivity">

    <Button
        android:id="@+id/addToWishListButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:text="@string/addToWishListButtonText" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="336dp"
        android:layout_height="217dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/lpriceText"
        android:layout_width="341dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="146dp"
        android:text="@string/lprice" />

    <TextView
        android:id="@+id/tileText"
        android:layout_width="341dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="207dp"
        android:text="@string/title" />

    <TextView
        android:id="@+id/mallNameText"
        android:layout_width="341dp"
        android:layout_height="31dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/mallName" />
</RelativeLayout>