<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphActivity">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart"
        android:layout_width="346dp"
        android:layout_height="236dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bar_chart"
        android:layout_centerVertical="true"
        android:text="@string/dateText" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="345dp"
        android:layout_height="41dp"
        android:layout_alignEnd="@+id/bar_chart"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="192dp"
        android:text="@string/titleText" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="142dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:autoLink="web"
        android:text="@string/buyButtonText" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="345dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/bar_chart"
        android:layout_marginBottom="127dp"
        android:text="@string/lpriceText" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/buyButton"
        android:layout_marginEnd="38dp"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</RelativeLayout>